quicksearch layout problem fixed

--- a/Serenity.Web/Style/serenity.quicksearch.less
+++ b/Serenity.Web/Style/serenity.quicksearch.less
@@ -67,12 +67,12 @@ a.quick-search-field {
     background: #fff url(images/down.gif) no-repeat right 5px;
     float: right;
     font-size: 11px;
-    height: 28px;
+    height: 30px;
     line-height: 25px;
     cursor: pointer;
     margin-right: 1px;
     color: #0090d9;
-    border: 1px solid #aaa;
+    border: 1px solid #ddd;
     border-radius: 0 4px 4px 0;
     border-style: solid solid solid none;
 }
